--- a/test.html
+++ b/test.html
@@ -153,15 +153,58 @@
 <!-- 8 -->
 
 <div class="sec8">
-    <>Управление данными во внешней памяти, управление данными в оперативной памяти, управление транзакциями, журнализация,
+    Управление данными во внешней памяти, управление данными в оперативной памяти, управление транзакциями, журнализация,
         резервное копирование и восстановление, поддержка языков БД является функциями:
     
         <input type="text" id="missingWord" placeholder="Вставьте пропущенное слово">
     </p>
     <button type="button" onclick="checkAnswer()">Проверить</button>
     <p id="result8"></p>
-
 </div>
+
+<!-- 9 -->
+<div class="sec9">
+    <p>Вставьте в пропуски:</p>
+    <p>
+        <input type="text" id="missingWord1" placeholder="Вставьте слово"> сохраняет информацию, необходимую для восстановления базы данных в предыдущее согласованное состояние в
+        случае логических или физических отказов. 
+        <br>
+        <input type="text" id="missingWord2" placeholder="Вставьте слово"> это набор операций в базе данных, которые должны быть либо все выполнены, либо все не выполнены.
+        Применяются для обеспечения безопасности, верности и непротиворечивости данных в таблице 
+    </p>
+    <button type="button" onclick="checkAnswers()">Проверить</button>
+    <p id="result9"></p>
+</div>
+
+<!-- 10 -->
+
+<div class="sec10">
+    <p>Экспорт/импорт данных; мониторинг базы данных — отслеживание характеристик функционирования и использования базы
+        данных; статистический анализ, позволяющий оценить производительность или степень использования базы данных;
+        реорганизация индексов; сборка «мусора»</p>
+    <p>
+        Перечисленное является дополнительными функциями СУБД, доступ к которым осуществляется при помощи <select
+            id="answerSelect">
+            <option value="">Выберите ответ</option>
+            <option value="utilit">утилит</option>
+            <option value="tools">инструментов</option>
+            <option value="modules">модулей</option>
+            <option value="features">функций</option>
+        </select>.
+    </p>
+    <button type="button" onclick="checkAnswer()">Проверить</button>
+    <p id="result10"></p>
+</div>
+<!-- 11 -->
+    <p>Свойство, означающее, что в БД содержится полная, непротиворечивая и адекватно отражающая предметную область
+        информация - <span id="missingWord"></span></p>
+    <input type="text" id="userAnswer" placeholder="Введите слово">
+    <button type="button" onclick="checkAnswer()">Проверить</button>
+    <p id="result11"></p>
+
+<!-- 12 -->
+
+    
 
     <script src="./js/script.js"></script>
 </body>
