--- a/test.html
+++ b/test.html
@@ -11,18 +11,18 @@
 
 <body>
     <div class="fsec">
-    <h1 class="headerh1">Тест:</h1>
-    <div class="container">
-        <div class="question" id="question1">Информация</div>
-        <div class="answer" id="answer1">Это описание некоторой сущности предметной области — объекта, процесса, явления или события, существующих или
+        <h1 class="headerh1">Тест:</h1>
+            <div class="container">
+                <div class="question" id="question1">Информация</div>
+                 <div class="answer" id="answer1">Это описание некоторой сущности предметной области — объекта, процесса, явления или события, существующих или
         происходящих в реальном мире</div>
-        <div class="question" id="question2">Информационная система</div>
-        <div class="answer" id="answer2">Это сведения об объектах, явления, процессах, событиях окружающего мира, уменьшающие неопределенность знаний о них</div>
-        <div class="question" id="question3">Информационный объект</div>
-        <div class="answer" id="answer3">Процесс, направленные на получение информации нового качества о состоянии объекта, процесса, явления или информационного
+                <div class="question" id="question2">Информационная система</div>
+                <div class="answer" id="answer2">Это сведения об объектах, явления, процессах, событиях окружающего мира, уменьшающие неопределенность знаний о них</div>
+                <div class="question" id="question3">Информационный объект</div>
+                <div class="answer" id="answer3">Процесс, направленные на получение информации нового качества о состоянии объекта, процесса, явления или информационного
         продукта</div>
-        <div class="question" id="question4">Информационная технология</div>
-        <div class="answer" id="answer4">Совокупность технических и программных средств, обеспечивающая сбор, хранение, обработку, поиск и выдачу информации в
+                <div class="question" id="question4">Информационная технология</div>
+                <div class="answer" id="answer4">Совокупность технических и программных средств, обеспечивающая сбор, хранение, обработку, поиск и выдачу информации в
         задачах любой области</div>
     </div>
     <p id="result1"></p>
@@ -30,6 +30,7 @@
     <!-- Вопрос 2 -->
 
     <div class="section2">
+        <h2 class="sec2-h2">Вопрос №2</h2>
         <p>
             <input type="text" id="word1" placeholder="Введите слово"> - это именованная совокупность взаимосвязанных данных,
             отображающая состояние объектов и их отношений в некоторой предметной области, используемых несколькими
@@ -46,6 +47,7 @@
 
     <!-- 3 ВОПРОС -->
     <div class="sec3">
+        <h2 class="sec3-h2">Вопрос №3</h2>
         <p>СУБД предназначена для:</p>
         <form id="quizForm">
             <input type="radio" name="answer" value="A"> своевременной выдачи достоверной информации<br>
@@ -58,6 +60,7 @@
 
     <!-- ВОПРОС 4 -->
     <div class="sec4">
+        <h2 class="sec4-h2">Вопрос №4</h2>
         <p>Прикладные программы взаимодействуют с базой данных при помощи:</p>
         <form id="quizForm">
             <input type="radio" name="answer" value="A"> СОД<br>
@@ -71,6 +74,7 @@
 
 
     <div class="sec5">
+        <h2 class="sec5-h2">Вопрос №5</h2>
         <p>Заголовок: Отличие БнД от БД (расшифруйте аббревиатуры и вставьте в пропуски)</p>
         <p>
             <select id="select1">
@@ -95,6 +99,7 @@
 <!-- 6 -->
 
     <div class="sec6">
+        <h2 class="sec6-h2">Вопрос №6</h2>
         <p>Словарь данных используется для:</p>
         <form id="quizForm">
             <input type="radio" name="answer" value="A"> A) централизованного хранения метаданных<br>
@@ -106,7 +111,7 @@
     </div>
 
 <!-- 7 -->
-
+    <h2 class="sec7-h2">Вопрос №7</h2>
     <div class="sec7">
         <p>Выберите правильные соответствия между категориями пользователей и их ролями в разработке баз данных:</p>
 
@@ -153,6 +158,7 @@
 <!-- 8 -->
 
 <div class="sec8">
+    <h2 class="sec8-h2">Вопрос №8</h2>
     Управление данными во внешней памяти, управление данными в оперативной памяти, управление транзакциями, журнализация,
         резервное копирование и восстановление, поддержка языков БД является функциями:
     
@@ -164,6 +170,7 @@
 
 <!-- 9 -->
 <div class="sec9">
+    <h2 class="sec9-h2">Вопрос №9</h2>
     <p>Вставьте в пропуски:</p>
     <p>
         <input type="text" id="missingWord1" placeholder="Вставьте слово"> сохраняет информацию, необходимую для восстановления базы данных в предыдущее согласованное состояние в
@@ -179,6 +186,7 @@
 <!-- 10 -->
 
 <div class="sec10">
+    <h2 class="sec210-h2">Вопрос №10</h2>
     <p>Экспорт/импорт данных; мониторинг базы данных — отслеживание характеристик функционирования и использования базы
         данных; статистический анализ, позволяющий оценить производительность или степень использования базы данных;
         реорганизация индексов; сборка «мусора»</p>
@@ -196,6 +204,7 @@
     <p id="result10"></p>
 </div>
 <!-- 11 -->
+<h2 class="sec1-h2">Вопрос №11</h2>
     <p>Свойство, означающее, что в БД содержится полная, непротиворечивая и адекватно отражающая предметную область
         информация - <span id="missingWord"></span></p>
     <input type="text" id="userAnswer" placeholder="Введите слово">
@@ -204,7 +213,7 @@
 
 <!-- 12 -->
 
-    
+
 
     <script src="./js/script.js"></script>
 </body>
